// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Component render 1`] = `
<div>
  <label
    className="wrapper"
    htmlFor="id1"
  >
    <input
      checked={false}
      className="original"
      disabled={undefined}
      id="id1"
      name="checkbox"
      onChange={undefined}
      type="checkbox"
    />
    <div
      className="checkbox"
    />
    <div
      className="text"
    >
      Option
    </div>
  </label>
</div>
`;

exports[`Checkbox Component render 2`] = `
<div
  isChecked={true}
>
  <label
    className="wrapper"
    htmlFor="id1"
  >
    <input
      checked={false}
      className="original"
      disabled={undefined}
      id="id1"
      name="checkbox"
      onChange={undefined}
      type="checkbox"
    />
    <div
      className="checkbox"
    />
    <div
      className="text"
    >
      Option
    </div>
  </label>
</div>
`;
